--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dev_dependencies:
 flutter:
  assets:
    - assets/images/login_img.png
+   - assets/files/catalog.json
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
