--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dev_dependencies:
 flutter:
  assets:
    - assets/images/login_img.png
-   - assets/files/catalog.json
+   - assets/files/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
