--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  google_fonts: ^6.1.0
+  google_fonts: ^4.0.4
   velocity_x: ^4.1.1
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
